trying to validate html

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
                     <br>
                     <br>
                     <input type="radio" name="mode" id="rps" class="mode-selection" checked>
-                    <label id="play-rps"><strong>Play Rock, Paper, Scissors?<strong></label>
+                    <label id="rps"><strong>Play Rock, Paper, Scissors?</strong></label>
                     <br>
                     <input type="radio" name="mode" id="rpsls" class="mode-selection">
-                    <label id="play-rpsls">Play Rock, Paper, Scissors, Lizard, Spock?</label>
+                    <label id="rpsls"><strong>Play Rock, Paper, Scissors, Lizard, Spock?</strong></label>
                     <br>
                     <br>
                     <input type="checkbox" id="opponent" class="mode-selection">
-                    <label id="play-opponent" >Play against an opponent?</label>
+                    <label id="opponent"><strong>Play against an opponent?</strong></label>
                 </div>
                 <br>
                 <div class="inputs"></div> <!-- will dynamically load this and result in script -->
