still validating html

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
                     <br>
                     <br>
                     <input type="radio" name="mode" id="rps" class="mode-selection" checked>
-                    <label id="rps"><strong>Play Rock, Paper, Scissors?</strong></label>
+                    <label id="play-rps"><strong>Play Rock, Paper, Scissors?</strong></label>
                     <br>
                     <input type="radio" name="mode" id="rpsls" class="mode-selection">
-                    <label id="rpsls"><strong>Play Rock, Paper, Scissors, Lizard, Spock?</strong></label>
+                    <label id="play-rpsls"><strong>Play Rock, Paper, Scissors, Lizard, Spock?</strong></label>
                     <br>
                     <br>
                     <input type="checkbox" id="opponent" class="mode-selection">
-                    <label id="opponent"><strong>Play against an opponent?</strong></label>
+                    <label id="play-opponent"><strong>Play against an opponent?</strong></label>
                 </div>
                 <br>
                 <div class="inputs"></div> <!-- will dynamically load this and result in script -->
@@ -32,8 +32,8 @@
                 <div class="results"></div>
                 <br>
                 <div class="buttons">
-                    <button class="play-button">PLAY</button>
-                    <button class="start-over-button">START OVER</button>
+                    <button type="button" class="play-button">PLAY</button>
+                    <button type="button" class="start-over-button">START OVER</button>
                 </div>
             </div>
         </div>
