--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>Rock</title>
         <!-- Link to your script file(s) and CSS in here somewhere -->
         <link rel="stylesheet" href="styles.css">
-        <script type="module" src="scripts.js"></script>
+        <script type="module" src="./scripts.js"></script>
     </head>
     <body>
     <!-- Your interface markup goes here -->
